# winter-square

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  LICENSE  README.md  build.sh
benchmarks/: latency_benchmark.cpp
core/: core_engine.hpp  types.hpp
core/distribution/: dispatcher.hpp  lockfree_queue.hpp  subscriber.hpp  subscriber_interface.hpp
core/network/: udp_receiver.hpp
core/parser/: parser_interface.hpp
docs/: ITCH_BENMARK_RESULTS.md
examples/: CMakeLists.txt  basic_example.cpp  itch50_example.cpp  itch_generator.cpp  udp_sender.cpp
include/common/: types.hpp
include/core/: market_data_engine.hpp  message_parser.hpp
include/fpga/: fpga_interface.hpp
include/memory/: memory_pool.hpp  object_pool.hpp
include/network/: kernel_bypass.hpp  udp_receiver.hpp
include/structures/: lock_free_queue.hpp  order_book.hpp
include/utils/: cpu_affinity.hpp  high_precision_timer.hpp
protocols/common/: parser_registry.hpp
protocols/itch50/: itch50_messages.hpp  itch50_parser.hpp
src/: main.cpp
src/core/: market_data_engine.cpp  message_parser.cpp
src/fpga/: fpga_interface.cpp
src/memory/: memory_pool.cpp  object_pool.cpp
src/network/: kernel_bypass.cpp  udp_receiver.cpp
src/structures/: lock_free_queue.cpp  order_book.cpp
src/utils/: cpu_affinity.cpp  high_precision_timer.cpp
tests/: CMakeLists.txt  test_itch50_parser.cpp  test_lock_free_queue.cpp  test_lockfree_queue.cpp  test_memory_pool.cpp  test_order_book.cpp
